# copperflame

./: .editorconfig  .gitignore  LICENSE  README.md  build.ps1  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: renovate.json5
.github/workflows/: main.yml  nix-build.yml  publish-packages.yml
assets/perfect-dos-vga/: Readme.md  default.nix
assets/stickers/: README.md
base16/: build.js  build.ps1  copperflame.yaml  scss.ejs  tex.ejs  ts.ejs
base16/latex/: dark.tex.ejs  light.tex.ejs
base16/logo/: icon.svg.ejs  logo-pro.svg.ejs  logo.svg.ejs
base16/skylighting/: dark.theme.ejs  light.theme.ejs
colors/: dark.Xresources  light.Xresources
colors/generator/: generator.ps1
css/: colors.scss  config.scss
css/elements/: acrylic.scss  floating.scss
examples/: Makefile  beamer.md  build.ps1  default.nix  example.bib
firefox/: README.md
font/: build-configuration.toml  build.js  default.nix  package.json
pandoc/: copperflame-colors-dark.tex  copperflame-colors-light.tex  copperflame-colors.tex  copperflame-common.tex  copperflame-dark.tex  copperflame-dark.theme  copperflame-header.tex  copperflame-light.tex  copperflame-light.theme  copperflame.tex  copperflame.theme  revealjs.html
pandoc/pandoc-filter-bibtex/: default.nix  pandoc-filter-bibtex.cabal  run.sh
pandoc/pandoc-filter-bibtex/src/: Main.hs
pandoc/pandoc-filter-copperflame-latex/: default.nix  pandoc-filter-copperflame-latex.cabal  run.bat  run.sh
pandoc/pandoc-filter-copperflame-latex/src/: Main.hs
typescript/: colors.ts  palette.ts
web/: package.json
(+46 files in other folders)
