cabal-version:      3.0
name:               pandoc-filter-copperflame-latex
version:            0.1.0.0
license:            ISC
license-file:       ../../LICENSE
author:             nzbr
build-type:         Simple
extra-source-files:
    default.nix
common warnings
    ghc-options: -Wall

executable filter-copperflame-latex
    import:           warnings
    hs-source-dirs:   src
    main-is:          Main.hs
    default-language: Haskell2010
    ghc-options:      -threaded -O3
    build-depends:    base >=4.16.4.0 && < 5
                    , text >= 1.2.5.0
                    , pandoc-types >=1.22.2.1 && <1.24
                    , hashmap >= 1.3.3
                    , regex-tdfa >= 1.3.2
